WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96525
[EFL] [WK2] Memory leaks in TestControllerEfl
https://bugs.webkit.org/show_bug.cgi?id=96525
Summary
[EFL] [WK2] Memory leaks in TestControllerEfl
Sudarsana Nagineni (babu)
Reported
2012-09-12 08:34:23 PDT
Valgrind reports the following memory leaks in WTR when I run the tests. ==21236== 24 bytes in 1 blocks are definitely lost in loss record 296 of 1,028 ==21236== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==21236== by 0x5620AF2: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==21236== by 0x52CD2F8: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==21236== by 0xB46976D: WebKit::WebString::createFromUTF8String(char const*) (WebString.h:60) ==21236== by 0xB46936D: WKStringCreateWithUTF8CString (WKString.cpp:41) ==21236== by 0x4243FF: WTR::TestController::initializeInjectedBundlePath() (TestControllerEfl.cpp:88) ==21236== by 0x414A5C: WTR::TestController::initialize(int, char const**) (TestController.cpp:312) ==21236== by 0x414010: WTR::TestController::TestController(int, char const**) (TestController.cpp:98) ==21236== by 0x42454F: main (main.cpp:51) ==21236== ==21236== 24 bytes in 1 blocks are definitely lost in loss record 297 of 1,028 ==21236== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==21236== by 0x5620AF2: WTF::fastMalloc(unsigned long) (FastMalloc.cpp:268) ==21236== by 0x52CD2F8: WTF::ThreadSafeRefCountedBase::operator new(unsigned long) (ThreadSafeRefCounted.h:72) ==21236== by 0xB46976D: WebKit::WebString::createFromUTF8String(char const*) (WebString.h:60) ==21236== by 0xB46936D: WKStringCreateWithUTF8CString (WKString.cpp:41) ==21236== by 0x42443B: WTR::TestController::initializeTestPluginDirectory() (TestControllerEfl.cpp:94) ==21236== by 0x414A6B: WTR::TestController::initialize(int, char const**) (TestController.cpp:313) ==21236== by 0x414010: WTR::TestController::TestController(int, char const**) (TestController.cpp:98) ==21236== by 0x42454F: main (main.cpp:51)
Attachments
Patch
(1.77 KB, patch)
2012-09-12 08:53 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-09-12 08:53:33 PDT
Created
attachment 163642
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-12 09:41:36 PDT
Comment on
attachment 163642
[details]
Patch Clearing flags on attachment: 163642 Committed
r128327
: <
http://trac.webkit.org/changeset/128327
>
WebKit Review Bot
Comment 3
2012-09-12 09:41:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug