[EFL] [WK2] Memory leaks in TestControllerEfl https://bugs.webkit.org/show_bug.cgi?id=96525

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-09-12
Reviewed by Kenneth Rohde Christiansen.

Fix memory leaks in EFL's TestRunner code by adopting an allocation
of WKString created with WKStringCreateWithUTF8CString().

* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::TestController::initializeInjectedBundlePath):
(WTR::TestController::initializeTestPluginDirectory):

Canonical link: https://commits.webkit.org/114414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128327 268f45cc-cd09-0410-ab3c-d52691b4dbfc